2010-05-26  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-compile-file): Only send non-nil keyword args.
	(slime-hack-quotes): New function.

2010-05-18  Stas Boukarev  <stassats@gmail.com>

	* slime.el (sldb-insert-condition): Don't create a mouse tooltip
	for long error message, tooltip shows the same text and doesn't
	add any value.
	(slime-definition-at-point): factor out of `slime-inspect-definition'.
	(slime-disassemble-definition): New, similar to `slime-inspect-definition'.

	* swank.lisp (disassemble-form): rename from disassemble-symbol,
	do the same as before but evaluate the argument.


2010-05-16  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-close-popup-window): Don't kill
	slime-popup-restore-data local variable in another buffer.

2010-05-13  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (define-slime-contrib): New macro.

2010-05-13  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (*after-init-hook*, simple-break)
	(coerce-to-condition, use-threads-p, current-thread-id): Moved
	around in swank.lisp.
	(with-temp-package): Deleted; not used anywhere.
	(ensure-list): Use in SWANK-REQUIRE.

2010-05-11  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-inspect-definition): New function,
	inspects definition at point.
	(slime-parse-context): Add :defstruct and :defpackage.

2010-05-10  Mark Evenson  <evenson@panix.com>

	* swank-loader.lisp (*architecture-features*): Add Java platforms
	as features for ABCL.

2010-05-06  Helmut Eller  <heller@common-lisp.net>

	Remove some non-standard file variables.

	* swank-cmucl.lisp, swank-scl.lisp: Remove pbook vars.
	* swank-clisp.lisp: Remove indentation settings. Slime does it
	automatically.

2010-05-05  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-dispatch-event): Fix typo in the previous commit.

2010-05-05  Stas Boukarev  <stassats@gmail.com>

	* Make buffer names more consistent.
	Patch by Leo Liu.

2010-05-05  Helmut Eller  <heller@common-lisp.net>
